// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button desktop className 1`] = `
<button
  className="YpcButton Test"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Text
</button>
`;

exports[`Button desktop disabled 1`] = `
<button
  className="YpcButton YpcButton_disabled"
  disabled={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  <span>
    Left
  </span>
  <span>
    Right
  </span>
</button>
`;

exports[`Button touch-phone className 1`] = `
<button
  className="YpcButton Test"
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  type="button"
>
  Text
</button>
`;

exports[`Button touch-phone disabled 1`] = `
<button
  className="YpcButton YpcButton_disabled"
  disabled={true}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onPointerEnter={[Function]}
  onPointerLeave={[Function]}
  onTouchStart={[Function]}
  tabIndex={-1}
  type="button"
>
  <span>
    Left
  </span>
  <span>
    Right
  </span>
</button>
`;
